--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/file": "^4.14.0",
     "@ionic-native/file-transfer": "^4.14.0",
@@ -32,11 +33,13 @@
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic-native/text-to-speech": "^4.12.2",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.0.0",
+    "cordova-android": "^7.1.1",
     "cordova-plugin-advanced-http": "^2.0.1",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filechooser": "^1.0.1",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -73,7 +76,9 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-nativeaudio": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
