--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/facebook": "^4.17.0",
     "@ionic-native/file": "^4.14.0",
     "@ionic-native/file-transfer": "^4.14.0",
+    "@ionic-native/google-plus": "^4.17.0",
     "@ionic-native/http": "^4.12.2",
     "@ionic-native/in-app-browser": "^4.13.0",
     "@ionic-native/in-app-purchase": "^4.12.2",
@@ -37,9 +39,11 @@
     "cordova-plugin-advanced-http": "^2.0.1",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-facebook4": "^3.1.0",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filechooser": "^1.0.1",
+    "cordova-plugin-googleplus": "^5.3.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -78,7 +82,16 @@
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-file": {},
       "cordova-plugin-filechooser": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "341553589725258",
+        "APP_NAME": "E-llumin8",
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.37.0"
+      },
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "928332012745-nod8bu021m5k5rljpg727o0v747an3sp.apps.googleusercontent.com",
+        "PLAY_SERVICES_VERSION": "11.8.0"
+      }
     },
     "platforms": [
       "android"
